fix p tag on safari

--- a/contact.css
+++ b/contact.css
@@ -48,10 +48,12 @@ main #phone-number {
 @media only screen and (max-width: 11.5rem) {
     main h2 {
         font-size: 0.7rem;
+        color: black;
     }
 
     main p {
         font-size: 0.6rem;
+        color: black;
     }
 }
 
